# finance_analizer

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  env.production.example  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: deploy-ghcr.yml  deploy.yml
app/: __init__.py  main.py
app/api/: __init__.py  dependencies.py  routes.py
app/api/endpoints/: auth.py  emails.py  health.py  notifications.py  processing.py  scheduler.py  senders.py  sync.py
app/clients/: __init__.py  deepseek.py  firefly.py  gmail.py
app/core/: __init__.py  config.py  exceptions.py  logging.py  security.py  session.py  timezone.py
app/db/: __init__.py  database.py  models.py  repositories.py
app/models/: __init__.py  schemas.py
app/services/: __init__.py  email_processor.py  notification_processor.py  scheduler.py  sender_learning.py  sync_service.py  transaction_service.py
scripts/: debug_firefly.py  list_accounts.py
tests/: conftest.py  test_auth_endpoints.py  test_firefly_integration.py  test_notifications.py  test_processing_async.py  test_repositories.py  test_schemas.py  test_transaction_flow.py
